--- a/resume.html
+++ b/resume.html
@@ -12,37 +12,39 @@
   <title>Calvin Ristad</title>
 </head>
 
-<body>  <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+<body>  
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
     <div class="container">
-      <a href="index.html" class="nav-link" target="_top">
-        <button class="btn btn-primary btn-lg btn-home m-2" id = "homeButton">
-          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
-            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
-            <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
+      <a href="#" class="nav-link" target="_top">
+        <button class="btn btn-primary btn-lg btn-home m-2" id="homeButton">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-house-fill"
+            viewBox="0 0 16 16">
+            <path
+              d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z" />
+            <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z" />
           </svg>
         </button>
       </a>
-      
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navmenu">
+      <div class="collapse navbar-collapse " id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="index.html#experience" class="nav-link">Experience</a>
+            <a href="#experience" class="nav-link">Experience</a>
           </li>
           <li class="nav-item">
-            <a href="index.html#projects" class="nav-link">Projects</a>
+            <a href="#projects" class="nav-link">Projects</a>
           </li>
           <li class="nav-item">
-            <a href="index.html#serviceandactivities" class="nav-link">Service/Activities</a>
+            <a href="#demo" class="nav-link">Demo</a>
           </li>
           <li class="nav-item">
-            <a href="index.html#resume" class="nav-link">Resume</a>
+            <a href="./resume.html" class="nav-link">Resume</a>
           </li>
         </ul>
       </div>
-      <a id="start"></a>
     </div>
   </nav>
 
@@ -60,7 +62,7 @@
         
         <div class="row">
           <div class="mx-auto text-center col-md-12">
-              <iframe src="https://docs.google.com/document/d/1AD4pPPIi2FyY87eCAdO3oH7lGziQ-z9Fk1NvL6GdTUA/preview" width="940" height="1080" allow="autoplay"></iframe>
+              <iframe src="https://drive.google.com/file/d/1mH-25QLNOAIJPlhZFctpZ-Sgmk9dU06W/view?usp=sharing/preview" width="940" height="1080" allow="autoplay"></iframe>
           </div>
         </div>
       </div>
