--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="#projects" class="nav-link">Projects</a>
           </li>
           <li class="nav-item">
-            <a href="#serviceandactivities" class="nav-link">Service/Activities</a>
+            <a href="#demo" class="nav-link">Demo</a>
           </li>
           <li class="nav-item">
             <a href="./resume.html" class="nav-link">Resume</a>
@@ -391,7 +391,7 @@
   </section>
 
 
-  <section>
+  <section id="demo">
     <div class="bg-lb text-dark p-5">
       <div class="container text-center">
         <h3> Game: Shotwars.io </h3>
