--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 <body>  
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
     <div class="container">
-      <a href="#" class="nav-link" target="_top">
+      <a href="./index.html#" class="nav-link" target="_top">
         <button class="btn btn-primary btn-lg btn-home m-2" id="homeButton">
           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-house-fill"
             viewBox="0 0 16 16">
@@ -32,13 +32,13 @@
       <div class="collapse navbar-collapse " id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#experience" class="nav-link">Experience</a>
+            <a href="./index.html#experience" class="nav-link">Experience</a>
           </li>
           <li class="nav-item">
-            <a href="#projects" class="nav-link">Projects</a>
+            <a href="./index.html#projects" class="nav-link">Projects</a>
           </li>
           <li class="nav-item">
-            <a href="#demo" class="nav-link">Demo</a>
+            <a href="./index.html#demo" class="nav-link">Demo</a>
           </li>
           <li class="nav-item">
             <a href="./resume.html" class="nav-link">Resume</a>
@@ -62,7 +62,7 @@
         
         <div class="row">
           <div class="mx-auto text-center col-md-12">
-              <iframe src="https://drive.google.com/file/d/1mH-25QLNOAIJPlhZFctpZ-Sgmk9dU06W/view?usp=sharing/preview" width="940" height="1080" allow="autoplay"></iframe>
+              <iframe src="https://docs.google.com/document/d/1WK-Qtuf0hJYnv9nvWtzElhkX9dDKE1h3w7UiosLewMI/preview" width="940" height="1080" allow="autoplay"></iframe>
           </div>
         </div>
       </div>
