fixed download link

--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
 
   <section class="bg-dark text-light p-5 text-center"> 
   <div class="pt-5">
-      <a href="https://drive.google.com/u/0/uc?id=1AD4pPPIi2FyY87eCAdO3oH7lGziQ-z9Fk1NvL6GdTUA&export=download" class="text-highlighted pt-5">
+      <a target="_blank" href="./Calvin Ristad Resume.pdf" class="text-highlighted pt-5">
         <h5>Download Link</h5>
       </a>
       <div class="container pt-4">
